--- a/components/benefit_sponsors/db/seedfiles/cca/fixtures/site_cca.yaml
+++ b/components/benefit_sponsors/db/seedfiles/cca/fixtures/site_cca.yaml
@@ -6,9 +6,9 @@ attributes: !ruby/hash:BSON::Document
       WxWP5J+ICzHOaeVu
   site_key: :cca
   byline: The Right Place for the Right Plan
-  short_name: Cover Me
+  short_name: Cover ME
   domain_name: hbxshop.org
-  long_name: Maine Cover Me
+  long_name: Maine Cover ME
   copyright_period_start: '2018'
   site_organizations_count: 9
   updated_at: 2018-06-04 19:15:50.700000000 Z
