--- a/components/notifier/spec/dummy/config/settings.yml
+++ b/components/notifier/spec/dummy/config/settings.yml
@@ -19,7 +19,7 @@ site:
   main_web_address: "www.DCHealthLink.com"
   health_care_website: "www.healthcare.gov"
   health_care_website_url: "https://www.healthcare.gov"
-  short_name: "Access Health CT"
+  short_name: "Cover ME"
   byline: "Welcome to the District's Health Insurance Marketplace"
   long_name: "District of Columbia Health Link"
   header_message: "Welcome to the District's Health Insurance Marketplace"
@@ -61,8 +61,8 @@ site:
     facebook_url: ""
 
 contact_center:
-  name: "Access Health CT's Customer Care Center"
-  alt_name: "Access Health CT Customer Service"
+  name: "Cover ME's Customer Care Center"
+  alt_name: "Cover ME Customer Service"
   po_box: "PO Box 97022"
   phone_number: "1-855-532-5465"
   fax: "1-617-933-3099"
@@ -85,7 +85,7 @@ contact_center:
   appeals: "info@dchealthlink.com"
 
   mailing_address:
-    name: "Access Health CT"
+    name: "Cover ME"
     address_1: "PO Box 97022"
     address_2:
     city: "Washington"
@@ -93,7 +93,7 @@ contact_center:
     zip_code: "20090"
 
   appeal_center:
-    name: "Access Health CT"
+    name: "Cover ME"
     address_1: "PO Box 97022"
     address_2:
     city: "Washington"
