--- a/db/seedfiles/cca/fixtures/site_cca.yaml
+++ b/db/seedfiles/cca/fixtures/site_cca.yaml
@@ -8,7 +8,7 @@ attributes: !ruby/hash:BSON::Document
   byline: The Right Place for the Right Plan
   short_name: Access Health
   domain_name: hbxshop.org
-  long_name: Maine Cover Me
+  long_name: Maine Cover ME
   copyright_period_start: '2018'
   site_organizations_count: 9
   updated_at: 2018-06-04 19:15:50.700000000 Z
