--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,9 +4,7 @@ development:
   channel_prefix: enroll_development
 
 test:
-  adapter: redis
-  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: enroll_test
+  adapter: async
 
 production:
   adapter: redis
