--- a/config/cable.yml
+++ b/config/cable.yml
@@ -4,7 +4,9 @@ development:
   channel_prefix: enroll_development
 
 test:
-  adapter: async
+  adapter: redis
+  url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
+  channel_prefix: enroll_development
 
 production:
   adapter: redis
