--- a/config/cable.yml
+++ b/config/cable.yml
@@ -6,7 +6,7 @@ development:
 test:
   adapter: redis
   url: <%= ENV.fetch("REDIS_URL") { "redis://localhost:6379/1" } %>
-  channel_prefix: enroll_development
+  channel_prefix: enroll_test
 
 production:
   adapter: redis
