--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -1,5 +1,8 @@
-name: full check suite troubleshoot
-on: push
+name: full check suite
+on:
+  push:
+  schedule:
+    - cron: '0 6 * * *'
 
 env:
   RSPEC_SPLIT_CONFIGURATION_PATH: 'ci/rspec-split-config.json'
