--- a/system/config/templates/features/aca_shop_market/aca_shop_market.yml
+++ b/system/config/templates/features/aca_shop_market/aca_shop_market.yml
@@ -12,3 +12,6 @@ registry:
       - key: :benefit_application_reinstate
         item: :benefit_application_reinstate
         is_enabled: true
+        settings:
+           - key: :offset_months
+             item: 0
