--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -25,6 +25,7 @@ jobs:
             v2-${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}-${{ hashFiles('**/Gemfile' ) }}
       - name: bundle install
         run: |
+          gem update --system
           bundle config path vendor/bundle
           bundle install
       - name: Run rubocop
@@ -77,6 +78,7 @@ jobs:
             v2-${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}-${{ hashFiles('**/Gemfile' ) }}
       - name: Install project gems
         run: |
+          gem update --system
           bundle config path vendor/bundle
           bundle install
       - name: Restore Node Modules
@@ -237,6 +239,7 @@ jobs:
             v2-${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}-${{ hashFiles('**/Gemfile' ) }}
       - name: Install project gems
         run: |
+          gem update --system
           bundle config path vendor/bundle
           bundle install
           gem install treye-semaphore_test_boosters --version '2.5.2'
