--- a/system/config/templates/features/aca_shop_market/aca_shop_market.yml
+++ b/system/config/templates/features/aca_shop_market/aca_shop_market.yml
@@ -10,7 +10,7 @@ registry:
         item: :send_secure_message
         is_enabled: true
       - key: :benefit_application_reinstate
-        item: :benefit_application_reinstate
+        item: BenefitSponsors::Operations::BenefitApplications::Reinstate.new
         is_enabled: true
         settings:
            - key: :offset_months
