--- a/.github/workflows/brakeman.yml
+++ b/.github/workflows/brakeman.yml
@@ -17,4 +17,10 @@ jobs:
         run: gem install brakeman
       - name: Run Brakeman
         run: brakeman -i config/brakeman.ignore
-
+      - name: Run Brakeman In Components
+        run: |
+          for test_dir in `ls -1 components` ; do
+            cd components/$test_dir
+            ((result+=brakeman -i config/brakeman.ignore))
+          done
+          exit $result
