--- a/.github/workflows/brakeman.yml
+++ b/.github/workflows/brakeman.yml
@@ -2,7 +2,7 @@ name: brakeman security check
 on: push
 
 jobs:
-  docs_deployment:
+  brakeman:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -19,8 +19,10 @@ jobs:
         run: brakeman -i config/brakeman.ignore
       - name: Run Brakeman In Components
         run: |
-          for test_dir in `ls -1 components` ; do
+          for test_dir in `ls -1 components`; do
             cd components/$test_dir
-            ((result+=brakeman -i config/brakeman.ignore))
+            brakeman -i config/brakeman.ignore
+            ((result+= $?))
+            cd ../..
           done
           exit $result
