--- a/components/benefit_sponsors/spec/dummy/system/config/templates/features/aca_shop_market/contributions.yml
+++ b/components/benefit_sponsors/spec/dummy/system/config/templates/features/aca_shop_market/contributions.yml
@@ -241,6 +241,28 @@ registry:
       - :enroll_app
       - :aca_shop_market
       - :benefit_market_catalog
+      - :catalog_2021
+    features:
+      - key: :aca_shop_fetch_enrollment_minimum_participation_2021
+        item: BenefitMarkets::Operations::BenefitSponsorCatalogs::FetchMinimumParticipation.new
+        is_enabled: true
+        settings:
+          - key: :zero_percent_sponsor_fixed_percent_contribution_model
+            item: 0
+          - key: :fifty_percent_sponsor_fixed_percent_contribution_model
+            item: <%= 2 / 3.0 %>
+      - key: :fehb_fetch_enrollment_minimum_participation_2021
+        item: BenefitMarkets::Operations::BenefitSponsorCatalogs::FetchMinimumParticipation.new
+        is_enabled: false
+        settings:
+          - key: :zero_percent_sponsor_fixed_percent_contribution_model
+            item: 0
+          - key: :fifty_percent_sponsor_fixed_percent_contribution_model
+            item: <%= 2 / 3.0 %>
+  - namespace:
+      - :enroll_app
+      - :aca_shop_market
+      - :benefit_market_catalog
       - :catalog_2020
     features:
       - key: :aca_shop_fetch_enrollment_minimum_participation_2020
@@ -281,3 +303,23 @@ registry:
             item: 0
           - key: :fifty_percent_sponsor_fixed_percent_contribution_model
             item: <%= 2 / 3.0 %>
+
+  - namespace:
+    - :enroll_app
+    - :aca_shop_market
+    - :broker_quoting_tool
+    features:
+      - key: :flexible_contribution_model_for_bqt
+        item: :contribution_model
+        is_enabled: true
+        settings:
+        - key: :initial_application_period
+          item: <%= Date.new(2020,03,01)..Date.new(2021,12,31) %>
+        - key: :renewal_application_period
+          item: <%= Date.new(2021,01,01)..Date.new(2021,12,31) %>
+        - key: :enabled_for_renewal_applications
+          item: true
+        - key: :employer_contribution_percent_minimum
+          item: 0
+        - key: :employer_family_contribution_percent_minimum
+          item: 0
