--- a/components/sponsored_benefits/spec/dummy/system/config/templates/features/aca_shop_market/contributions.yml
+++ b/components/sponsored_benefits/spec/dummy/system/config/templates/features/aca_shop_market/contributions.yml
@@ -226,7 +226,7 @@ registry:
         is_enabled: true
         settings:
           - key: :contribution_model_key
-            item: :zero_percent_sponsor_fixed_percent_contribution_model
+            item: :fifty_percent_sponsor_fixed_percent_contribution_model
           - key: :benefit_application_kind
             item: :renewal
           - key: :effective_period
@@ -318,7 +318,7 @@ registry:
         - key: :renewal_application_period
           item: <%= Date.new(2021,01,01)..Date.new(2021,12,31) %>
         - key: :enabled_for_renewal_applications
-          item: true
+          item: false
         - key: :employer_contribution_percent_minimum
           item: 0
         - key: :employer_family_contribution_percent_minimum
