REFS Maintenance - Changes erb lint to pull translation cops from separate file.

--- a/.erb-lint.yml
+++ b/.erb-lint.yml
@@ -3,8 +3,8 @@ linters:
   ErbSafety:
     enabled: true
     better_html_config: .better-html.yml
-  # Rubocop:
-  #  enabled: true
-  #  rubocop_config:
-  #    inherit_from:
-  #      - .rubocop.yml
+  Rubocop:
+    enabled: true
+    rubocop_config:
+      inherit_from:
+        - .rubocop-erbcop.yml
