REFS Maintenance - Tweaks the full suite.

--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -31,12 +31,14 @@ jobs:
       - name: Run rubocop
         run: |
           git config diff.renameLimit 1000
-          git fetch --no-tags origin master
+          git fetch --no-tags --depth=1 origin master
           bundle exec rubocop-git origin/master | grep "no offenses detected"
       - name: Run erb-lint
         run: |
+          git config diff.renameLimit 1000
+          git fetch --no-tags --depth=1 origin master
           git diff origin/master... --name-only | grep .erb
-          bundle exec erblint $(git diff origin/master... --name-only | grep .erb) | grep "No errors were found in ERB files"
+          bundle exec erblint $(git diff origin/master --name-only | grep .erb) | grep "No errors were found in ERB files"
   build-assets:
     needs: [rubocop]
     runs-on: ubuntu-latest
