REFS Maintenance - Removes ...

--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -37,7 +37,7 @@ jobs:
         run: |
           git config diff.renameLimit 1000
           git fetch --no-tags --depth=1 origin master
-          git diff origin/master... --name-only | grep .erb
+          git diff origin/master --name-only | grep .erb
           bundle exec erblint $(git diff origin/master --name-only | grep .erb) | grep "No errors were found in ERB files"
   build-assets:
     needs: [rubocop]
