--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -33,8 +33,27 @@ jobs:
           git config diff.renameLimit 800
           git fetch --no-tags --depth=1 origin master
           bundle exec rubocop-git origin/master | grep "no offenses detected"
+  brakeman:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ruby/setup-ruby@v1
+      - name: Cache Gems
+        uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: v2-${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}-${{ hashFiles('**/Gemfile' ) }}
+          restore-keys: |
+            v2-${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}-${{ hashFiles('**/Gemfile' ) }}
+      - name: bundle install
+        run: |
+          gem update --system
+          bundle config path vendor/bundle
+          bundle install
+      - name: run brakeman
+        run: bundle exec brakeman
   build-assets:
-    needs: [rubocop]
+    needs: [rubocop, brakeman]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -73,7 +92,7 @@ jobs:
       - name: compile assets
         run: bundle exec rake assets:precompile
   engines:
-    needs: [rubocop]
+    needs: [rubocop, brakeman]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -130,6 +149,11 @@ jobs:
           echo bundle config
           bundle config path vendor/bundle
           NODE_ENV=test RAILS_ENV=test ./bin/webpack
+      - name: run brakeman
+        run: |
+          cd $root/components/${{ matrix.engine-name }}
+          bundle config path ../../vendor/bundle
+          bundle exec brakeman
       - name: test engine
         run: |
           root=`pwd -P`
@@ -138,7 +162,7 @@ jobs:
           bundle config path ../../vendor/bundle
           bundle exec rspec --fail-fast
   benefit-sponsors:
-    needs: [rubocop]
+    needs: [rubocop, brakeman]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -192,7 +216,7 @@ jobs:
           bundle config path ../../vendor/bundle
           rspec_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
   rspec:
-    needs: [rubocop]
+    needs: [rubocop, brakeman]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -235,7 +259,7 @@ jobs:
       - name: Run tests
         run: rspec_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
   cucumber:
-    needs: [rubocop]
+    needs: [rubocop, brakeman]
     runs-on: ubuntu-latest
     strategy:
       matrix:
