--- a/spec/support/fixtures/approved_translation_strings.yml
+++ b/spec/support/fixtures/approved_translation_strings.yml
@@ -4,6 +4,7 @@ approved_translation_strings_in_erb_tags:
   proper_name_related_strings: ["name", "first_name", "last_name", "full_name", "title"]
   record_identifiers: ["hbx_id", "hbx_enrollment_id", "hios_id"]
   non_text_method_calls: ["hios_id", "product_id"]
-  other_strings: ["Untranslated String"]
+  other_strings: ["Untranslated String", 'bad string']
 approved_translation_strings_outside_erb_tags:
-  string_list: ["%&gt", "ID:", "product.hios_id, hbx_enrollment_id: hbx_enrollment.id, active_year: product.active_year}), remote: true)%&gt;", "0) %&gt;"]
+  string_list: ["%&gt", "ID:", "product.hios_id, hbx_enrollment_id: hbx_enrollment.id, active_year: product.active_year}), remote: true)%&gt;", "0) %&gt;",
+  'here is another bad string', "this is a problematic string, here this is another string we have to test it and see what happens"]
