--- a/spec/support/fixtures/approved_translation_strings.yml
+++ b/spec/support/fixtures/approved_translation_strings.yml
@@ -3,7 +3,7 @@ approved_translation_strings_in_erb_tags:
   "format_policy_purchase_date", "format_policy_purchase_time", "display_carrier_logo", "enrollment_coverage_end", "form_for", "pundit_class"]
   non_word_numerical_strings: ["coverage_year", "effective_on", "coverage_terminated_on", "hired_on", "end_of_month",
   "start_of_month", "terminated_on", "active_year", "dob", "suggested_cobra_effective_date", "date_of_record", "TimeKeeper"]
-  proper_name_related_strings: ["name", "first_name", "last_name", "full_name", "title"]
+  proper_name_related_strings: ["name", "first_name", "last_name", "full_name", "title", "subject", "body"]
   record_identifiers: ["hbx_id", "hbx_enrollment_id", "hios_id"]
   non_text_method_calls: ["hios_id", "product_id", "id"]
   other_strings: ["untranslated string", 'bad string']
