--- a/spec/support/fixtures/approved_translation_strings.yml
+++ b/spec/support/fixtures/approved_translation_strings.yml
@@ -5,7 +5,7 @@ approved_translation_strings_in_erb_tags:
   "start_of_month", "terminated_on", "active_year", "dob", "suggested_cobra_effective_date", "date_of_record", "TimeKeeper", "created_at", "sent_at"]
   proper_name_related_strings: ["name", "first_name", "last_name", "full_name", "title", "subject", "body"]
   record_identifiers: ["hbx_id", "hbx_enrollment_id", "hios_id"]
-  non_text_method_calls: ["hios_id", "product_id", "id"]
+  non_text_method_calls: ["hios_id", "product_id", "id", "aasm_state"]
   other_strings: ["untranslated string", 'bad string']
 approved_translation_strings_outside_erb_tags:
   string_list: ["%&gt", "ID:", 'here is another bad string', "this is a problematic string, here this is another string we have to test it and see what happens"]
