REFS Maintenance - Adds more exceptions for approved strings.

--- a/spec/support/fixtures/approved_translation_strings.yml
+++ b/spec/support/fixtures/approved_translation_strings.yml
@@ -4,8 +4,8 @@ approved_translation_strings_in_erb_tags:
   non_word_numerical_strings: ["coverage_year", "effective_on", "coverage_terminated_on", "hired_on", "end_of_month",
   "start_of_month", "terminated_on", "active_year", "dob", "suggested_cobra_effective_date", "date_of_record", "TimeKeeper", "created_at", "sent_at", "fein"]
   proper_name_related_strings: ["name", "first_name", "last_name", "full_name", "title", "subject", "body"]
-  record_identifiers: ["hbx_id", "hbx_enrollment_id", "hios_id"]
-  non_text_method_calls: ["hios_id", "product_id", "id", "aasm_state"]
+  record_identifiers: ["hbx_id", "hbx_enrollment_id", "hios_id", "hios_id", "product_id", "id",]
+  non_text_method_calls: ["aasm_state"]
   other_strings: ["untranslated string", 'bad string']
 approved_translation_strings_outside_erb_tags:
   string_list: ["%&gt", "ID:", 'here is another bad string', "this is a problematic string, here this is another string we have to test it and see what happens"]
