--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -54,8 +54,28 @@ jobs:
         run: |
           git fetch --no-tags --depth=1 origin trunk
           bundle exec rake view_translations_linter:lint_git_difference_changed_lines
+  ada_compliance_linter:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v2
+      - uses: ruby/setup-ruby@v1
+      - name: Cache Gems
+        uses: actions/cache@v2
+        with:
+          path: vendor/bundle
+          key: v2-${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}-${{ hashFiles('**/Gemfile' ) }}
+          restore-keys: |
+            v2-${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}-${{ hashFiles('**/Gemfile' ) }}
+      - name: bundle install
+        run: |
+          gem update --system
+          bundle config path vendor/bundle
+          bundle install
+      - name: Run ADA Compliance Linter
+        run: |
+          git fetch --no-tags --depth=1 origin trunk
+          bundle exec rake view_ada_compliance_linter:lint_git_difference_changed_lines
   brakeman:
-    needs: [rubocop, view_linter]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -79,7 +99,7 @@ jobs:
             cd ../..
           done
   build-assets:
-    needs: [rubocop, brakeman, view_linter]
+    needs: [rubocop, brakeman, view_linter, ada_compliance_linter]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
