--- a/config/translations_linter/approved_translation_strings.yml
+++ b/config/translations_linter/approved_translation_strings.yml
@@ -1,15 +1,25 @@
 approved_translation_strings_in_erb_tags:
-  html_elements_and_helper_methods: ["l10n", "I18n", "content_for", "fields_for", "file_field_tag", "form_tag", "render", "pundit_span", "number_to_currency", "partial",
-  "format_policy_purchase_date", "format_policy_purchase_time", "display_carrier_logo", "enrollment_coverage_end", "form_for", "pundit_class"]
-  non_word_numerical_strings: ["coverage_year", "effective_on", "coverage_terminated_on", "hired_on", "end_of_month",
-  "start_of_month", "terminated_on", "active_year", "dob", "suggested_cobra_effective_date", "date_of_record", "TimeKeeper", "created_at", "sent_at", "fein"]
+  html_elements_and_helper_methods: ["add_progress_class", "asset_data_base64", "build_link_for_sep_type", "cost", "csrf_meta_tags",
+  "display_dental_metal_level", "l10n", "I18n", "content_for", "content_tag", "fields_for",
+  "image_tag", "file_field_tag", "form_tag", "render", "pundit_span", "number_to_currency", "partial",
+  "format_policy_purchase_date", "format_policy_purchase_time", "javascript_include_tag", "javascript_pack_tag", "qle_date_calc", "qle_date", "qle_link_generater",
+  "menu_tab_class", "number_to_obscured_ssn", "deductible", "display_carrier_logo", "enrollment_coverage_end", "form_for", "pundit_class", "stylesheet_link_tag",
+  "table_empty_to_human", "token_tag", "yield"]
+  dynamic_css_classes: ["<%= 'active'", '<%= "active"', "'active' if count == 0", "link_text_class", "icon_class"]
+  non_word_numerical_strings: ["age_on", "coverage_year", "current_year", "date.to_formatted_s", "effective_on", "coverage_terminated_on", "hired_on",
+  "end_of_month", "end_on", "next_poss_effective_date", "qle_on",
+  "start_of_month", "terminated_on", "active_year", "dob", "suggested_cobra_effective_date", "date_of_record", "sign_in_count", "ssn",
+  "phone", "TimeKeeper", "created_at", "sent_at", "start_on", "strftime", "fein", "phone_number", "verif_due_date"]
   proper_name_related_strings: ["name", "first_name", "last_name", "full_name", "title", "subject", "body"]
-  record_identifiers: ["hbx_id", "hbx_enrollment_id", "hios_id", "hios_id", "product_id", "id",]
-  non_text_method_calls: ["aasm_state"]
-  record_method_calls: ["address.", "benefit_group.", "broker_role.", "broker_agency.", benefit_sponsorship.",
-  "benefit_application.", "benefit_package.", "carrier.", "carrier_profile.", "consumer_profile.", "family.", "census_employee.", "census_member.",
-  "employee_role.", "hbx_enrollment.", "object."]
-  instance_variables: [""]
-  other_strings: ["untranslated string", 'bad string']
+  websites: ["site_website_address", "email", "site_main_web_link", "site_user_sign_in_url", "last_sign_in_ip", "last_portal_visited",
+  "non_discrimination_complaint_url", "link_to_site_business_resource_center"]
+  record_identifiers: ["hbx_id", "hbx_enrollment_id", "hios_id", "hios_id", "product_id", ".id",]
+  non_text_method_calls: ["aasm_state", "mpi_indicator", ]
+  record_method_calls: ["address.", "active_sep.", "benefit_group.", "broker_role.", "broker_agency.", benefit_sponsorship.",
+  "benefit_application.", "benefit_package.", "carrier.", "carrier_profile.", "consumer_profile.", "dependent.", "family.", "census_employee.", "census_member.",
+  "employee_role.", "enrollment.", "hbx_enrollment.", "notice.", "qle.", "person.", "plan.", "record.", "service_visit.", "object.", "vlp_doc."]
+  instance_variables: []
+  settings: ["settings.", "contact_center"]
+  other_strings: ["untranslated string", 'bad string', "msg"]
 approved_translation_strings_outside_erb_tags:
   string_list: ["%&gt", "ID:", 'here is another bad string', "this is a problematic string, here this is another string we have to test it and see what happens"]
