--- a/config/translations_linter/approved_translation_strings.yml
+++ b/config/translations_linter/approved_translation_strings.yml
@@ -1,25 +1,36 @@
 approved_translation_strings_in_erb_tags:
+  conditional_logic_methods: [".is_shop?", ".can_be_reinstated?", ".is_cobra_status?", ".has_active_or_term_exists_for_reinstated_date?"]
   html_elements_and_helper_methods: ["add_progress_class", "asset_data_base64", "build_link_for_sep_type", "cost", "csrf_meta_tags",
   "display_dental_metal_level", "l10n", "I18n", "content_for", "content_tag", "fields_for",
-  "image_tag", "file_field_tag", "form_tag", "render", "pundit_span", "number_to_currency", "partial",
+  "image_tag", "file_field_tag", "form_tag", "render", "pundit_span", "number_to_currency", "partial", "raw", "locals", "mod_attr",
   "format_policy_purchase_date", "format_policy_purchase_time", "javascript_include_tag", "javascript_pack_tag", "qle_date_calc", "qle_date", "qle_link_generater",
   "menu_tab_class", "number_to_obscured_ssn", "deductible", "display_carrier_logo", "enrollment_coverage_end", "form_for", "pundit_class", "stylesheet_link_tag",
-  "table_empty_to_human", "token_tag", "yield"]
-  dynamic_css_classes: ["<%= 'active'", '<%= "active"', "'active' if count == 0", "link_text_class", "icon_class"]
-  non_word_numerical_strings: ["age_on", "coverage_year", "current_year", "date.to_formatted_s", "effective_on", "coverage_terminated_on", "hired_on",
-  "end_of_month", "end_on", "next_poss_effective_date", "qle_on",
-  "start_of_month", "terminated_on", "active_year", "dob", "suggested_cobra_effective_date", "date_of_record", "sign_in_count", "ssn",
-  "phone", "TimeKeeper", "created_at", "sent_at", "start_on", "strftime", "fein", "phone_number", "verif_due_date"]
+  "table_empty_to_human", "token_tag", "prev_page_tag", "gap_tag", "next_page_tag", "yield"]
+  dynamic_css_classes: ["<%= 'active'", '<%= "active"', "'active' if count == 0", "link_text_class",
+  "icon_class", "div_class %>", 'col_styles', "style", "top_margin", "text_class", "'active' if", "'checked' if"]
+  array_counter_variables: ["ind", "index + 1", "num", "row", "qr", "item.", "listing."]
+  non_word_numerical_strings: ["age_on", "coverage_year", "format_datetime", "current_year", "date.to_formatted_s", "effective_on", "coverage_terminated_on", "hired_on",
+  "end_of_month", "end_on", "next_poss_effective_date", "qle_on", ".start_date", ".end_date", "percent_complete", ".to_date", "open_enrollment_period",
+  "start_of_month", "terminated_on", "active_year", "dob", "suggested_cobra_effective_date", "date_of_record", "sign_in_count", "ssn", ".age",
+  "phone", "TimeKeeper", "created_at", ".sent_at", ".start_on", "ssn", "strftime", "fein", "phone_number", "verif_due_date", "statement_year"]
+  counting_methods: [".size",  ".count"]
   proper_name_related_strings: ["name", "first_name", "last_name", "full_name", "title", "subject", "body"]
-  websites: ["site_website_address", "email", "site_main_web_link", "site_user_sign_in_url", "last_sign_in_ip", "last_portal_visited",
-  "non_discrimination_complaint_url", "link_to_site_business_resource_center"]
-  record_identifiers: ["hbx_id", "hbx_enrollment_id", "hios_id", "hios_id", "product_id", ".id",]
-  non_text_method_calls: ["aasm_state", "mpi_indicator", ]
-  record_method_calls: ["address.", "active_sep.", "benefit_group.", "broker_role.", "broker_agency.", benefit_sponsorship.",
-  "benefit_application.", "benefit_package.", "carrier.", "carrier_profile.", "consumer_profile.", "dependent.", "family.", "census_employee.", "census_member.",
-  "employee_role.", "enrollment.", "hbx_enrollment.", "notice.", "qle.", "person.", "plan.", "record.", "service_visit.", "object.", "vlp_doc."]
-  instance_variables: []
-  settings: ["settings.", "contact_center"]
-  other_strings: ["untranslated string", 'bad string', "msg"]
+  # TODO: not sure if this should include methods related to websites or also exact URLs.
+  # Althgouh URLs should maybe be changed in the linter to be exact matches, in case they have strings
+  websites: ["site_website_address", "email", "site_main_web_link", "site_user_sign_in_url", "last_sign_in_ip", "last_portal_visited", "last_sign_in_at",
+  "non_discrimination_complaint_url", "link_to_site_business_resource_center", "group_selection_url"]
+  record_identifiers: ["hbx_id", "hbx_enrollment_id", "hios_id", "hios_id", "product_id", ".id"]
+  # TOOD: We need to determine what to do about this- since when they're being called for a view, they can't really have a translation call associated
+  # with them since we won't know what key
+  string_method_calls: ["aasm_state", "mpi_indicator", "kind.capitalize", "v_type"]
+  record_method_calls: ["address.", "active_sep.", "benefit_group.", "benefit.", "broker_role.", "broker_agency.", benefit_sponsorship.",
+  "benefit_application.", "benefit_package.", "carrier.", "carrier_profile.", "consumer_profile.", "dependent.", "enrollee.", "family.", "census_employee.", "census_member.",
+  "employee_role.", "employee.", "enrollment.", "hbx_enrollment.", "member.", "notice.", "qle.", "person.", "plan.", "record.", "service_visit.", "object.", "translation.", "vlp_doc."]
+  # TODO: We might need a specific way to deal with these
+  instance_variables: ["@kp_pay_now_url", "@kp_relay_state" , "2notice"]
+  # TODO: This needs thought
+  unique_variable_names: ["err", "message"]
+  settings: ["settings.", "contact_center", "aca_shop_market_employer_contribution_percent_minimum"]
+  other_strings: ["untranslated string", 'bad string', "msg", "item.humanize"]
 approved_translation_strings_outside_erb_tags:
   string_list: ["%&gt", "ID:", 'here is another bad string', "this is a problematic string, here this is another string we have to test it and see what happens"]
