adding rr settings

--- a/system/config/templates/features/aca_shop_market/aca_shop_market.yml
+++ b/system/config/templates/features/aca_shop_market/aca_shop_market.yml
@@ -12,3 +12,9 @@ registry:
       - key: :employer_registration
         item: BenefitSponsors::Operations::Employers::Create.new
         is_enabled: true
+      - key: :broker_registration
+        item: BenefitSponsors::Operations::BrokerAgencies::Create.new
+        is_enabled: true
+      - key: :ga_registration
+        item: BenefitSponsors::Operations::GeneralAgencies::Create.new
+        is_enabled: true
