--- a/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/system/config/templates/features/enroll_app/enroll_app.yml
@@ -46,6 +46,7 @@ registry:
             item: <%= Date.new(2020,9,18)..Date.new(2021,3,31) %>
       - key: :manage_account_functionality
         item: "manage_account"
+        is_enabled: true
   - namespace:
       - :features
       - :enroll_app
