--- a/components/financial_assistance/app/views/financial_assistance/applications/steps.yml
+++ b/components/financial_assistance/app/views/financial_assistance/applications/steps.yml
@@ -8,7 +8,7 @@
                   - gutter: 12
                     type: raw_html
                     classNames: 'small-padding-top-bottom'
-                    text: "To make it easier to determine my eligibility for help paying for coverage in future years, I agree to allow DC Health Link to use my income data, including information from tax returns, for the next five years. DC Health Link will send me a notice, let me make any changes, and I can opt out at any time. *<br>"
+                    text: "To make it easier to determine my eligibility for premium reductions in future years, I agree to allow DC Health Link to use my income data, including information from tax returns, for the next five years. DC Health Link will send me a notice, let me make any changes, and I can opt out at any time. *<br>"
             - cells:
                   - gutter: 3
                     type: label_radio
@@ -39,7 +39,7 @@
                   - gutter: 12
                     type: raw_html
                     classNames: 'small-padding-top-bottom'
-                    text: "How long would you like your eligibility for help paying for coverage to be renewed? *"
+                    text: "How long would you like your eligibility for premium reductions to be renewed? *"
                   - gutter: 12
                     type: label_radio
                     label: 5 years
