adding edit personal info to families actions drop down & added new RR setting.

--- a/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/system/config/templates/features/enroll_app/enroll_app.yml
@@ -47,6 +47,9 @@ registry:
       - key: :manage_account_functionality
         item: "manage_account"
         is_enabled: true
+      - key: :edit_personal_info_functionality
+        item: "edit_personal_info"
+        is_enabled: true
   - namespace:
       - :features
       - :enroll_app
