--- a/system/config/templates/features/enroll_app/enroll_app.yml
+++ b/system/config/templates/features/enroll_app/enroll_app.yml
@@ -44,6 +44,12 @@ registry:
         settings:
           - key: :effective_period
             item: <%= Date.new(2020,9,18)..Date.new(2021,3,31) %>
+      - key: :prior_plan_year_sep
+        is_enabled: true
+        item: Operations::UpdatePriorPlanCoverage.new
+        settings:
+          - key: :offset_months
+            item: 12
   - namespace:
       - :features
       - :enroll_app
@@ -82,8 +88,3 @@ registry:
       - key: :age_off_relaxed_eligibility
         item: Operations::AgeOffRelaxedEligibility.new
         is_enabled: true
-      - key: :prior_plan_year_sep
-        is_enabled: true
-        settings:
-          - key: :prior_plan_eligible_year
-            item: <%= TimeKeeper.date_of_record.prev_year.year %>
