--- a/system/config/templates/features/aca_shop_market/aca_shop_market.yml
+++ b/system/config/templates/features/aca_shop_market/aca_shop_market.yml
@@ -12,9 +12,18 @@ registry:
       - key: :employer_registration
         item: BenefitSponsors::Operations::Employers::Create.new
         is_enabled: true
+      - key: :employer_staff_registration
+        item: BenefitSponsors::Operations::Employers::AddEmployerStaff.new
+        is_enabled: true
       - key: :broker_registration
         item: BenefitSponsors::Operations::BrokerAgencies::Create.new
         is_enabled: true
+      - key: :broker_staff_registration
+        item: BenefitSponsors::Operations::BrokerAgencies::AddBrokerAgencyStaff.new
+        is_enabled: true
       - key: :ga_registration
         item: BenefitSponsors::Operations::GeneralAgencies::Create.new
+        is_enabled: true
+      - key: :ga_staff_registration
+        item: BenefitSponsors::Operations::GeneralAgencies::AddGeneralAgencyStaff.new
         is_enabled: true
