--- a/.github/workflows/full-suite.yml
+++ b/.github/workflows/full-suite.yml
@@ -11,7 +11,7 @@ env:
   CUCUMBER_SPLIT_CONFIGURATION_PATH: 'ci/cucumber-split-config.json'
 
 jobs:
-  rubocop:
+  code_linters:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -33,29 +33,13 @@ jobs:
           git config diff.renameLimit 800
           git fetch --no-tags --depth=1 origin trunk
           bundle exec rubocop-git origin/trunk | grep "no offenses detected"
-  view_linter:
-    runs-on: ubuntu-latest
-    steps:
-      - uses: actions/checkout@v2
-      - uses: ruby/setup-ruby@v1
-      - name: Cache Gems
-        uses: actions/cache@v2
-        with:
-          path: vendor/bundle
-          key: v2-${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}-${{ hashFiles('**/Gemfile' ) }}
-          restore-keys: |
-            v2-${{ runner.os }}-gems-${{ hashFiles('**/Gemfile.lock') }}-${{ hashFiles('**/Gemfile' ) }}
-      - name: bundle install
-        run: |
-          gem update --system
-          bundle config path vendor/bundle
-          bundle install
-      - name: Run View Linter
+          bundle exec rake view_translations_linter:lint_git_difference_changed_lines
+      - name: Run Translations View Linter
         run: |
           git fetch --no-tags --depth=1 origin trunk
           bundle exec rake view_translations_linter:lint_git_difference_changed_lines
   brakeman:
-    needs: [rubocop, view_linter]
+    needs: [code_linters]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -79,7 +63,7 @@ jobs:
             cd ../..
           done
   build-assets:
-    needs: [rubocop, brakeman, view_linter]
+    needs: [code_linters, brakeman]
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
@@ -118,7 +102,7 @@ jobs:
       - name: compile assets
         run: bundle exec rake assets:precompile
   engines:
-    needs: [rubocop, brakeman]
+    needs: [code_linters, brakeman]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -183,7 +167,7 @@ jobs:
           bundle config path ../../vendor/bundle
           bundle exec rspec --fail-fast
   benefit-sponsors:
-    needs: [rubocop, brakeman]
+    needs: [code_linters, brakeman]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -237,7 +221,7 @@ jobs:
           bundle config path ../../vendor/bundle
           rspec_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
   rspec:
-    needs: [rubocop, brakeman]
+    needs: [code_linters, brakeman]
     runs-on: ubuntu-latest
     strategy:
       matrix:
@@ -280,7 +264,7 @@ jobs:
       - name: Run tests
         run: rspec_booster --job ${{ matrix.group }}/${{ strategy.job-total }}
   cucumber:
-    needs: [rubocop, brakeman]
+    needs: [code_linters, brakeman]
     runs-on: ubuntu-latest
     strategy:
       matrix:
