adding feature enabled RR check config.

--- a/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -31,3 +31,6 @@ registry:
       - key: :cancel_renewals_for_term
         item: Operations::Individual::CancelRenewalEnrollment.new
         is_enabled: true
+      - key: :hub_ivl_registration
+        item: :consumer_role
+        is_enabled: true
