--- a/system/config/templates/features/aca_shop_market/aca_shop_market.yml
+++ b/system/config/templates/features/aca_shop_market/aca_shop_market.yml
@@ -9,6 +9,9 @@ registry:
       - key: :send_secure_message_employer
         item: :send_secure_message
         is_enabled: true
+      - key: :employee_registration
+        item: :employee_role
+        is_enabled: true
       - key: :employer_registration
         item: BenefitSponsors::Operations::Employers::Create.new
         is_enabled: true
