exclude codesweep for jquery-ui.js file

--- a/.github/workflows/codesweep.yml
+++ b/.github/workflows/codesweep.yml
@@ -18,6 +18,9 @@ jobs:
       - uses: actions/checkout@v3
         with:
           fetch-depth: 0
+      - name: Exclude Files
+        run: |
+          rm app/assets/javascripts/jquery-ui.js
       - name: Run AppScan CodeSweep
         uses: HCL-TECH-SOFTWARE/appscan-codesweep-action@v1
         with:
