--- a/.docker/rabbitmq/Dockerfile.rabbitmq
+++ b/.docker/rabbitmq/Dockerfile.rabbitmq
@@ -7,6 +7,7 @@ COPY .docker/rabbitmq/hbx_rabbit_definitions.json /tmp/
 COPY .docker/rabbitmq/advanced.config /tmp/
 
 CMD cp /tmp/rabbitmq.conf /etc/rabbitmq/ && \
+USER rabbitmq
 sed -r "s/HBX_ID/$HBX_ID/g" /tmp/hbx_rabbit_definitions.json > /etc/rabbitmq/hbx_rabbit_definitions.json && \
 sed -i -r "s/ENV_NAME/$ENV_NAME/g" /etc/rabbitmq/hbx_rabbit_definitions.json && \
 sed -r "s|RABBITMQ_URL|$RABBITMQ_URL|g" /tmp/advanced.config > /etc/rabbitmq/advanced.config && \
