automate creation of renewal benefit coverage period (#3042)
* adds rr config create_bcp_on_date_change

* automate creation of renewal benefit coverage period

* minor code refactor to cleanup code

---------

Co-authored-by: Sai Praveen Gudimetla <saipraveen.gudimetla@gmail.com>
Co-authored-by: vishal kalletla <vishuk1201@gmail.com>

--- a/config/client_config/me/system/config/templates/features/aca_individual_market/aca_individual_market.yml
+++ b/config/client_config/me/system/config/templates/features/aca_individual_market/aca_individual_market.yml
@@ -147,4 +147,10 @@ registry:
             item: 15
           - key: :year_offset
             item: 0
-
+      - key: :create_bcp_on_date_change
+        is_enabled: <%= ENV['CREATE_BCP_ON_DATE_CHANGE_IS_ENABLED'] || false %>
+        settings:
+          - key: :bcp_creation_month
+            item: <%= ENV['BCP_CREATION_MONTH'] || 7 %>
+          - key: :bcp_creation_day
+            item: <%= ENV['BCP_CREATION_DAY'] || 10 %>
